# Yosoyun.github.io

./: .gitignore  README.md  ai-digest-bot.html  index.html  prompt-pack.md
.github/workflows/: ai-telegram-digest.yml
ai-intel-bot/: .env.example  README.md  mobile_link.py  setup_telegram.py  telegram_digest.py
ai-intel-bot/config/: sources.json
ai-intel-bot/config/channels/: markets.json  math-finance.json  quantum.json  trillion.json  world.json
data/: prompts.json
docs/: Indrajeet-Yadav-Math-Faculty-Prompt-Library.docx
hero-prompt-studio/: index.html
hero-prompt-studio/assets/: index-CTzcK2Ws.css  index-gj4eyPD-.js
scripts/: build_prompt_library.py
student-copy-grader/: LICENSE  README.md  app.py  index.html  pyproject.toml
student-copy-grader/backend/: .env.example  README.md  main.py  requirements.txt
student-copy-grader/docs/: architecture.md  evaluation-plan.md  market-entry-plan.md  research.md  rubric-format.md
student-copy-grader/examples/: cbse_science_demo_rubric.json  student_answers_demo.json
student-copy-grader/src/copygrader/: __init__.py  cli.py  grading.py  models.py  ocr.py  report.py  rubric.py
student-copy-grader/tests/: test_grading.py
